# celeste

./: README.md  keymap.json  pyproject.toml
.github/workflows/: build.yaml
celeste/: celeste.c  config.h  info.json  readme.md  rules.mk
celeste/common/: common.c
celeste/keymaps/colemakdh/: keymap.c
celeste/keymaps/default/: keymap.c
celeste/keymaps/urob/: config.h  keymap.c  rules.mk
celeste/keymaps/vial/: keymap.c  rules.mk  vial.json
celeste/q8/: q8.h
celeste/q8/ansi_encoder/keymaps/vial/: keymap.c
