[tool.poetry]
name = "celeste"
version = "0.1.0"
description = "Keychron Q8 Keyboard"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qmk = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
